# sloppy

./: .gitignore  CLAUDE.md  README.md  export_presets.cfg  flake.nix  project.godot  sloppy.gdextension
.claude/agents/: design.md  dev.md  sound-designer.md
.github/workflows/: android.yml  web.yml
audio/: audio-guide.md
audio/prompts/: sfx.md  tracks.md
design/: asset-list.md  style-guide.md
design/prompts/: icon.md  notes.md  playfield.md  ui.md
pelican/: hoodik.json
rust/: Cargo.toml
rust/src/: conductor.rs  judge.rs  lib.rs
scenes/: main.tscn
scripts/: conductor_gd.gd  game.gd  judge_gd.gd
